--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uiw/react-codemirror": "^4.23.6",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "emotion": "^11.0.0",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
