--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@uiw/react-codemirror": "^4.23.6",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
     "emotion": "^11.0.0",
     "framer-motion": "^11.11.10",
     "gsap": "^3.12.5",
